borsh-derive/src/internals/deserialize/structs/snapshots/override_automatically_added_default_trait_async.snap
---
source: borsh-derive/src/internals/deserialize/structs/mod.rs
expression: pretty_print_syn_str(actual).unwrap()
---
impl<K, V, U> borsh::de::BorshDeserialize for G1<K, V, U>
where
    U: borsh::de::BorshDeserialize,
    K: ::core::default::Default,
    V: ::core::default::Default,
{
    fn deserialize_reader<__R: borsh::io::Read>(
        reader: &mut __R,
    ) -> ::core::result::Result<Self, borsh::io::Error> {
        ::core::result::Result::Ok(
            Self(
                ::core::default::Default::default(),
                <U as borsh::BorshDeserialize>::deserialize_reader(reader)?,
            ),
        )
    }
}
