borsh-derive/src/internals/deserialize/structs/snapshots/simple_struct_with_custom_crate.snap
---
source: borsh-derive/src/internals/deserialize/structs/mod.rs
expression: pretty_print_syn_str(&actual).unwrap()
---
#[automatically_derived]
impl reexporter::borsh::de::BorshDeserialize for A {
    fn deserialize_reader<__R: reexporter::borsh::io::Read>(
        reader: &mut __R,
    ) -> ::core::result::Result<Self, reexporter::borsh::io::Error> {
        Ok(Self {
            x: reexporter::borsh::BorshDeserialize::deserialize_reader(reader)?,
            y: reexporter::borsh::BorshDeserialize::deserialize_reader(reader)?,
        })
    }
}
